# synthesis

./: .gitignore  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  SPECIFICATIONS.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report.md  phase-completion.md  spec-deviation.md
.github/workflows/: .gitkeep
database/: README.md  schema.prisma  schema.sql  seed.py
database/migrations/: .gitkeep
docs/architecture/: algorithms.md  api.md  database.md  deployment.md
docs/research/: README.md  development-plan-part1.md  development-plan-part2.md  master-prompt.md  project-summary.md  quick-reference.md  research-answers.md
n8n/: README.md
n8n/workflows/: csv-import.json  gap-bridging.json  graphrag-query.json
scripts/: README.md  check-specs.py  setup.sh  validate-phase.py
specs/: parameters.json  stopwords.json  validation-rules.json
src/: README.md  __init__.py
src/algorithms/: __init__.py  betweenness.py  forceatlas2.py  louvain.py  modularity.py
src/api/: __init__.py  main.py
src/frontend/: .gitignore  README.md  index.html  package.json
src/gaps/: __init__.py  filters.py  gap_detector.py
src/graph/: __init__.py  edge_calculator.py  graph_builder.py
src/graphrag/: __init__.py  context_builder.py  query_processor.py
src/nlp/: __init__.py  ngram_generator.py  stopwords.py  text_processor.py
tests/: README.md  __init__.py
tests/fixtures/: sample_graphs.py  sample_text.txt  sample_texts.py
tests/integration/: __init__.py
tests/specifications/: __init__.py  test_gap_thresholds.py  test_ngram_weights.py  (+1 more)
(+40 files in other folders)
