[tool.poetry]
name = "synthesis"
version = "0.1.0"
description = "Text-to-knowledge-graph system with AI insights, structural gap detection, and cognitive analysis"
authors = ["Alex Peter Bosch <alex.peter.bosch@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
prisma = "^0.11.0"
spacy = "^3.7.2"
networkx = "^3.2.1"
python-louvain = "^0.16"
fa2 = "^0.3.5"
numpy = "^1.26.2"
pandas = "^2.1.4"
pydantic = "^2.5.2"
python-multipart = "^0.0.6"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
